--- a/WebHNAMDotNetCore.RestApi/WebHNAMDotNetCore.RestApi.csproj
+++ b/WebHNAMDotNetCore.RestApi/WebHNAMDotNetCore.RestApi.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.20" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+	  <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+
   </ItemGroup>
 
   <ItemGroup>
